fixed a bunch of code, gradientbg still breaking the screensize :P

--- a/assets/css/glass.css
+++ b/assets/css/glass.css
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Dongle:wght@700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dongle:wght@700&display=swap');
 .bg {
   position: absolute;
 }
@@ -9,30 +9,21 @@
   height: 100vh;
   overflow: hidden;
   scroll-behavior: smooth;
-  font-family: "Fira Sans", sans-serif;
+  font-family: 'Fira Sans', sans-serif;
 }
 .title {
   text-align: center;
   font-size: clamp(2rem, 8vw, 5rem);
-  font-family: "Dongle", sans-serif;
+  font-family: 'Dongle', sans-serif;
   margin-bottom: -110px;
   margin-top: -110px;
   position: relative;
   pointer-events: none;
-  text-shadow:
-    1px 1px 1px #919191,
-    1px 2px 1px #919191,
-    1px 3px 1px #919191,
-    1px 4px 1px #919191,
-    1px 5px 1px #919191,
-    1px 6px 1px #919191,
-    1px 7px 1px #919191,
-    1px 8px 1px #919191,
-    1px 9px 1px #919191,
-    1px 10px 1px #919191,
-    1px 18px 6px rgba(16, 16, 16, 0.4),
-    1px 22px 10px rgba(16, 16, 16, 0.2),
-    1px 25px 35px rgba(16, 16, 16, 0.2),
+  text-shadow: 1px 1px 1px #919191, 1px 2px 1px #919191, 1px 3px 1px #919191,
+    1px 4px 1px #919191, 1px 5px 1px #919191, 1px 6px 1px #919191,
+    1px 7px 1px #919191, 1px 8px 1px #919191, 1px 9px 1px #919191,
+    1px 10px 1px #919191, 1px 18px 6px rgba(16, 16, 16, 0.4),
+    1px 22px 10px rgba(16, 16, 16, 0.2), 1px 25px 35px rgba(16, 16, 16, 0.2),
     1px 30px 60px rgba(16, 16, 16, 0.4);
 }
 
@@ -63,7 +54,7 @@
 .content::after {
   backdrop-filter: blur(15px);
   position: absolute;
-  content: "";
+  content: '';
   width: 100%;
   height: 100%;
   top: 0;
@@ -93,14 +84,13 @@
   .title {
     margin: 0;
   }
-
 }
 
 h2 {
   text-align: left;
   position: relative;
   font-size: 2rem;
-  font-family: "Dongle", sans-serif;
+  font-family: 'Dongle', sans-serif;
   margin-bottom: -9px;
   margin-top: 0px;
 }
