bunch of things
added some animations, fixed navbar and made some tweaks to hover animation, ptbr resume is WIP

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,3 +8,14 @@
   color: var(--text);
   font-family: monospace;
 }
+*::-webkit-scrollbar {
+  width: 5px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #000000;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: #999999;
+}
