--- a/assets/css/hoveranim.css
+++ b/assets/css/hoveranim.css
@@ -23,6 +23,8 @@
   --link-color-projects: rgba(0, 200, 0, 0.6);
   --hovered-link-color-projects: rgb(0, 200, 0);
   --link-color: rgb(165, 165, 165);
+  --time: 400ms;
+  --bg-small-size: 4px;
   background-color: transparent;
   color: #ffffff;
   transition: color 0.2s ease 0s;
@@ -34,11 +36,11 @@
   cursor: pointer;
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--link-color) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--link-color) calc(50% - var(--bg-small-size)),
     var(--link-color) 100%
   );
-  transition: all 120ms ease-in-out 0s;
+  transition: background-size, background-position var(--time) ease-in-out 0s;
   background-size: 100% 200%;
   background-position: 0 0;
   word-break: break-word;
@@ -47,8 +49,8 @@
 .link-color:hover {
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--hovered-link-color) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--hovered-link-color) calc(50% - var(--bg-small-size)),
     var(--hovered-link-color) 100%
   );
   background-position: 0 100%;
@@ -57,8 +59,8 @@
 .link-static {
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--hovered-link-color) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--hovered-link-color) calc(50% - var(--bg-small-size)),
     var(--hovered-link-color) 100%
   );
   background-position: 0 100%;
@@ -70,11 +72,11 @@
   cursor: pointer;
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--link-color-linux) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--link-color-linux) calc(50% - var(--bg-small-size)),
     var(--link-color-linux) 100%
   );
-  transition: all 120ms ease-in-out 0s;
+  transition: background-size, background-position var(--time) ease-in-out 0s;
   background-size: 100% 200%;
   background-position: 0 0;
   word-break: break-word;
@@ -83,8 +85,8 @@
 .link-color-linux:hover {
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--hovered-link-color-linux) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--hovered-link-color-linux) calc(50% - var(--bg-small-size)),
     var(--hovered-link-color-linux) 100%
   );
   background-position: 0 100%;
@@ -93,8 +95,8 @@
 .link-static-linux {
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--hovered-link-color-linux) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--hovered-link-color-linux) calc(50% - var(--bg-small-size)),
     var(--hovered-link-color-linux) 100%
   );
   background-position: 0 100%;
@@ -106,11 +108,11 @@
   cursor: pointer;
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--link-color-web) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--link-color-web) calc(50% - var(--bg-small-size)),
     var(--link-color-web) 100%
   );
-  transition: all 120ms ease-in-out 0s;
+  transition: background-size, background-position var(--time) ease-in-out 0s;
   background-size: 100% 200%;
   background-position: 0 0;
   word-break: break-word;
@@ -119,8 +121,8 @@
 .link-color-web:hover {
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--hovered-link-color-web) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--hovered-link-color-web) calc(50% - var(--bg-small-size)),
     var(--hovered-link-color-web) 100%
   );
   background-position: 0 100%;
@@ -129,8 +131,8 @@
 .link-static-web {
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--hovered-link-color-web) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--hovered-link-color-web) calc(50% - var(--bg-small-size)),
     var(--hovered-link-color-web) 100%
   );
   background-position: 0 100%;
@@ -142,11 +144,11 @@
   cursor: pointer;
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--link-color-js) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--link-color-js) calc(50% - var(--bg-small-size)),
     var(--link-color-js) 100%
   );
-  transition: all 120ms ease-in-out 0s;
+  transition: background-size, background-position var(--time) ease-in-out 0s;
   background-size: 100% 200%;
   background-position: 0 0;
   word-break: break-word;
@@ -155,8 +157,8 @@
 .link-color-js:hover {
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--hovered-link-color-js) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--hovered-link-color-js) calc(50% - var(--bg-small-size)),
     var(--hovered-link-color-js) 100%
   );
   background-position: 0 100%;
@@ -165,8 +167,8 @@
 .link-static-js {
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--hovered-link-color-js) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--hovered-link-color-js) calc(50% - var(--bg-small-size)),
     var(--hovered-link-color-js) 100%
   );
   background-position: 0 100%;
@@ -178,11 +180,11 @@
   cursor: pointer;
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--link-color-edu) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--link-color-edu) calc(50% - var(--bg-small-size)),
     var(--link-color-edu) 100%
   );
-  transition: all 120ms ease-in-out 0s;
+  transition: background-size, background-position var(--time) ease-in-out 0s;
   background-size: 100% 200%;
   background-position: 0 0;
   word-break: break-word;
@@ -191,8 +193,8 @@
 .link-color-edu:hover {
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--hovered-link-color-edu) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--hovered-link-color-edu) calc(50% - var(--bg-small-size)),
     var(--hovered-link-color-edu) 100%
   );
   background-position: 0 100%;
@@ -201,8 +203,8 @@
 .link-static-edu {
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--hovered-link-color-edu) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--hovered-link-color-edu) calc(50% - var(--bg-small-size)),
     var(--hovered-link-color-edu) 100%
   );
   background-position: 0 100%;
@@ -214,11 +216,11 @@
   cursor: pointer;
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--link-color-rust) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--link-color-rust) calc(50% - var(--bg-small-size)),
     var(--link-color-rust) 100%
   );
-  transition: all 120ms ease-in-out 0s;
+  transition: background-size, background-position var(--time) ease-in-out 0s;
   background-size: 100% 200%;
   background-position: 0 0;
   word-break: break-word;
@@ -227,8 +229,8 @@
 .link-color-rust:hover {
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--hovered-link-color-rust) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--hovered-link-color-rust) calc(50% - var(--bg-small-size)),
     var(--hovered-link-color-rust) 100%
   );
   background-position: 0 100%;
@@ -237,8 +239,8 @@
 .link-static-rust {
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--hovered-link-color-rust) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--hovered-link-color-rust) calc(50% - var(--bg-small-size)),
     var(--hovered-link-color-rust) 100%
   );
   background-position: 0 100%;
@@ -250,11 +252,11 @@
   cursor: pointer;
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--link-color-react) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--link-color-react) calc(50% - var(--bg-small-size)),
     var(--link-color-react) 100%
   );
-  transition: all 120ms ease-in-out 0s;
+  transition: background-size, background-position var(--time) ease-in-out 0s;
   background-size: 100% 200%;
   background-position: 0 0;
   word-break: break-word;
@@ -263,8 +265,8 @@
 .link-color-react:hover {
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--hovered-link-color-react) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--hovered-link-color-react) calc(50% - var(--bg-small-size)),
     var(--hovered-link-color-react) 100%
   );
   background-position: 0 100%;
@@ -273,8 +275,8 @@
 .link-static-react {
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--hovered-link-color-react) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--hovered-link-color-react) calc(50% - var(--bg-small-size)),
     var(--hovered-link-color-react) 100%
   );
   background-position: 0 100%;
@@ -286,11 +288,11 @@
   cursor: pointer;
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--color-vue) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--color-vue) calc(50% - var(--bg-small-size)),
     var(--color-vue) 100%
   );
-  transition: all 120ms ease-in-out 0s;
+  transition: background-size, background-position var(--time) ease-in-out 0s;
   background-size: 100% 200%;
   background-position: 0 0;
   word-break: break-word;
@@ -299,8 +301,8 @@
 .link-color-vue:hover {
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--color-vue-hover) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--color-vue-hover) calc(50% - var(--bg-small-size)),
     var(--color-vue-hover) 100%
   );
   background-position: 0 100%;
@@ -309,8 +311,8 @@
 .link-static-vue {
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--color-vue-hover) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--color-vue-hover) calc(50% - var(--bg-small-size)),
     var(--color-vue-hover) 100%
   );
   background-position: 0 100%;
@@ -322,11 +324,11 @@
   cursor: pointer;
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--link-color-py) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--link-color-py) calc(50% - var(--bg-small-size)),
     var(--link-color-py) 100%
   );
-  transition: all 120ms ease-in-out 0s;
+  transition: background-size, background-position var(--time) ease-in-out 0s;
   background-size: 100% 200%;
   background-position: 0 0;
   word-break: break-word;
@@ -335,8 +337,8 @@
 .link-color-py:hover {
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--hovered-link-color-py) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--hovered-link-color-py) calc(50% - var(--bg-small-size)),
     var(--hovered-link-color-py) 100%
   );
   background-position: 0 100%;
@@ -345,8 +347,8 @@
 .link-static-py {
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--hovered-link-color-py) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--hovered-link-color-py) calc(50% - var(--bg-small-size)),
     var(--hovered-link-color-py) 100%
   );
   background-position: 0 100%;
@@ -358,11 +360,11 @@
   cursor: pointer;
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--link-color-cpp) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--link-color-cpp) calc(50% - var(--bg-small-size)),
     var(--link-color-cpp) 100%
   );
-  transition: all 120ms ease-in-out 0s;
+  transition: background-size, background-position var(--time) ease-in-out 0s;
   background-size: 100% 200%;
   background-position: 0 0;
   word-break: break-word;
@@ -371,8 +373,8 @@
 .link-color-cpp:hover {
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--hovered-link-color-cpp) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--hovered-link-color-cpp) calc(50% - var(--bg-small-size)),
     var(--hovered-link-color-cpp) 100%
   );
   background-position: 0 100%;
@@ -381,8 +383,8 @@
 .link-static-cpp {
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--hovered-link-color-cpp) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--hovered-link-color-cpp) calc(50% - var(--bg-small-size)),
     var(--hovered-link-color-cpp) 100%
   );
   background-position: 0 100%;
@@ -394,11 +396,11 @@
   cursor: pointer;
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--link-color-projects) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--link-color-projects) calc(50% - var(--bg-small-size)),
     var(--link-color-projects) 100%
   );
-  transition: all 120ms ease-in-out 0s;
+  transition: background-size, background-position var(--time) ease-in-out 0s;
   background-size: 100% 200%;
   background-position: 0 0;
   word-break: break-word;
@@ -407,8 +409,8 @@
 .link-color-projects:hover {
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--hovered-link-color-projects) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--hovered-link-color-projects) calc(50% - var(--bg-small-size)),
     var(--hovered-link-color-projects) 100%
   );
   background-position: 0 100%;
@@ -417,8 +419,8 @@
 .link-static-projects {
   background-image: linear-gradient(
     transparent 0,
-    transparent calc(50% - 9px),
-    var(--hovered-link-color-projects) calc(50% - 9px),
+    transparent calc(50% - var(--bg-small-size)),
+    var(--hovered-link-color-projects) calc(50% - var(--bg-small-size)),
     var(--hovered-link-color-projects) 100%
   );
   background-position: 0 100%;
