--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1,16 +1,15 @@
 @import url(assets/css/hoveranim.css);
 *[data-visible='0'] {
-  animation: fadeOut 0.3s ease-in-out;
-  transition: font-size 0.5s ease-in-out;
+  transition: font-size 0.5s ease-in-out, opacity 0.8s ease-in-out;
   pointer-events: none;
   font-size: 0;
-
+  opacity: 0;
 }
 
 *[data-visible='1'] {
-  animation: fadeIn 0.3s ease-in-out;
-  transition: font-size 0.5s ease-in-out;
+  transition: font-size 0.8s cubic-bezier(.36, .45, .16, 1.35), opacity 0.8s ease-in-out;
   font-size: clamp(1rem, 1.5vw, 1.4rem);
+  opacity: 1;
 }
 
 @keyframes fadeIn {
