--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1,39 +1,30 @@
 @import url(assets/css/hoveranim.css);
 *[data-visible='0'] {
-  transition: font-size 0.5s ease-in-out, opacity 0.8s ease-in-out;
+  transition: font-size 0.5s cubic-bezier(.62,-0.33,.48,1.1), opacity 0.8s ease-in-out;
   pointer-events: none;
   font-size: 0;
   opacity: 0;
 }
 
 *[data-visible='1'] {
-  transition: font-size 0.8s cubic-bezier(.36, .45, .16, 1.35), opacity 0.8s ease-in-out;
+  transition: font-size 0.5s cubic-bezier(.62, -0.33, .48, 1.1), opacity 0.2s ease-in-out;
   font-size: clamp(1rem, 1.5vw, 1.4rem);
   opacity: 1;
 }
+.bttn-translate {
+  position: absolute;
+  top: 0%;
+  font-size: clamp(1.5rem, 2.5vw, 2rem);
+  right: 0%;
+  transition: 0.5s;
+  overflow: hidden;
+  z-index: 1;
+  cursor: pointer;
 
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-    height: 0%;
-  }
-
-  100% {
-    opacity: 1;
-    height: 100%;
-  }
 }
 
-@keyframes fadeOut {
-  0% {
-    opacity: 1;
-    height: 100%;
-  }
-
-  100% {
-    opacity: 0;
-    height: 0%;
-  }
+.bttn-translate:hover {
+  animation: glitch 2s steps(100) infinite, increaseFontSize 0.8s forwards;
 }
 .all {
   height: 90vh;
