--- a/assets/css/glass.css
+++ b/assets/css/glass.css
@@ -18,6 +18,7 @@
   margin-top: -110px;
   position: relative;
   pointer-events: none;
+  color: #ffffff;
   text-shadow: 1px 1px 1px #919191, 1px 2px 1px #919191, 1px 3px 1px #919191,
     1px 4px 1px #919191, 1px 5px 1px #919191, 1px 6px 1px #919191,
     1px 7px 1px #919191, 1px 8px 1px #919191, 1px 9px 1px #919191,
