--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -55,9 +55,52 @@
     padding: 0;
     position: fixed;
     bottom: 0;
+    width: 100%;
+    border-radius: 0;
+  }
+
+  .navbar ul {
+    margin: 0.5rem;
+    gap: 1vw;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 
   .navbar a {
+    font-size: 0.7rem;
+    padding: 0.2rem 0.4rem;
+  }
+
+  .link-active {
     font-size: 0.8rem;
+  }
+
+  @keyframes increaseFontSize {
+    0% {
+      font-size: 0.7rem;
+    }
+
+    50% {
+      font-size: 1.2rem;
+    }
+
+    100% {
+      font-size: 0.8rem;
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .navbar ul {
+    gap: 0.5vw;
+  }
+
+  .navbar a {
+    font-size: 0.6rem;
+    padding: 0.1rem 0.3rem;
+  }
+
+  .link-active {
+    font-size: 0.7rem;
   }
 }
