--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -20,6 +20,7 @@
   transition: 0.5s;
   overflow: hidden;
   z-index: 1;
+  color: white;
   cursor: pointer;
 
 }
@@ -127,4 +128,7 @@
   .name {
     display: none;
   }
+}
+p{
+  color: white;
 }
