--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -1,7 +1,7 @@
 @import url(assets/css/hoveranim.css);
 @import url(assets/css/glitchanim.css);
 .navbar {
-  border-radius: 200px;
+  border-radius: 100px;
   padding-left: 0%;
   padding-right: 0%;
   position: fixed;
@@ -10,6 +10,8 @@
   left: 0;
   opacity: 100%;
   transition: opacity 0.5s;
+  backdrop-filter: blur(10x);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .navbar:hover {
