--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -20,6 +20,7 @@
   transition: 0.5s;
   overflow: hidden;
   z-index: 1;
+  color: white;
   cursor: pointer;
 
 }
@@ -43,6 +44,12 @@
     gap: 0.5rem;
 }
 
+.txtcontainer {
+  display: grid;
+  grid-template-columns: 1fr;
+  width: 45%;
+  padding-top: 48px;
+}
 
 .name {
   color: white;
@@ -55,23 +62,73 @@
   cursor: pointer;
 }
 
-.ascii-container {
+.bgcontainer {
+  z-index: -1;
+  margin-top: -4rem;
+  overflow: visible;
+}
+
+.txtdiv {
   position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1;
-  background: #000;
+  overflow: hidden;
+  color: rgb(94, 93, 93);
+  word-break: break-all;
+  mask-image: radial-gradient(circle at center, black 10%, transparent 50%);
+  -webkit-mask-image: radial-gradient(
+    circle at center,
+    black 10%,
+    transparent 50%
+  );
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 1.9rem;
 }
 
-.ascii-container pre {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
+.randtxt {
+  position: absolute;
+  mask-image: radial-gradient(
+    circle at var(--x) var(--y),
+    black 1%,
+    transparent 50%
+  );
+  -webkit-mask-image: radial-gradient(
+    circle at var(--x) var(--y),
+    black 1%,
+    transparent 50%
+  );
+  pointer-events: none;
+  margin: 0%;
+  padding: 0%;
 }
 
-.bttn-translate {
+@media screen and (max-width: 800px) {
+  .txt {
+    mask-image: none;
+    -webkit-mask-image: none;
+  }
+
+  .txtdiv {
+    mask-image: none;
+    -webkit-mask-image: none;
+    height: 100vh;
+  }
+
+  .txtcontainer {
+    width: 100%;
+  }
+
+  .randtxt {
+    color: rgb(26, 26, 26);
+    height: 100vh;
+  }
+
+  .name {
+    display: none;
+  }
+}
+p{
   color: white;
 }
